# IR-based-stress-detection

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: REPORT.md  index.md
notebooks/: visualize_nir_pulseox.ipynb
notebooks/.ipynb_checkpoints/: visualize_nir_pulseox-checkpoint.ipynb
scripts/: data_exploration.py  download.py  evaluate.py  inference.py  preprocess.py  smoke_test.py  train.py  visualize_WESAD_stress.py  visualize_h5.py
src/ir_stress/: __init__.py  config.py  device.py  tracking.py
src/ir_stress/dataset/: __init__.py  base.py  dataset.py  face_crop.py  mr_nirp_download.py  mr_nirp_driving.py  physdrive.py  splits.py  synthetic.py
src/ir_stress/evaluation/: __init__.py  evaluator.py
src/ir_stress/inference/: __init__.py  pipeline.py  plot.py
src/ir_stress/models/: __init__.py  backbone.py  lejepa.py  model.py  physnet.py  physnet_lite.py  predict.py  strppg_head.py
src/ir_stress/signals/: __init__.py  filtering.py  ihr_core.py  ihr_dlib.py  ihr_pipeline.py  ihr_regions.py  metrics.py  sq_stft_utils.py  stress_indicators.py
src/ir_stress/training/: __init__.py  ipr.py  loss.py  trainer.py
