[project]
name = "ir-stress"
version = "0.1.0"
description = "Unsupervised rPPG and stress detection from near-infrared video"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=6.1.0",
    "h5py>=3.10",
    "hydra-core>=1.3",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "mlflow>=2.10",
    "neurokit2>=0.2",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "pandas>=2.0",
    "scipy>=1.11",
    "torch>=2.0",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ir_stress"]

[tool.hatch.build.targets.wheel.force-include]
"src/ir_stress/dataset/face_detection_yunet_2023mar.onnx" = "ir_stress/dataset/face_detection_yunet_2023mar.onnx"

[tool.hatch.build.targets.sdist]
include = ["src/ir_stress"]

[project.optional-dependencies]
notebook = [
    "matplotlib>=3.8",
]

[tool.uv]
package = true
